[gd_scene load_steps=22 format=3 uid="uid://0buycf0at6al"]

[ext_resource type="AudioStream" uid="uid://dkt5d0pj73udn" path="res://assets/freesound.org/565491__jakegwizdak__wind-loop.mp3" id="1"]
[ext_resource type="Script" path="res://game/player/start_xr.gd" id="1_74f0b"]
[ext_resource type="PackedScene" uid="uid://chmr4dedp3pl5" path="res://addons/godot-xr-tools/assets/right_hand.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://bl2nuu3qhlb5k" path="res://addons/godot-xr-tools/functions/movement_direct.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://dwc7cx5txw3ix" path="res://addons/godot-xr-tools/assets/player_body.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://kyhaogt0a4q8" path="res://addons/godot-xr-tools/functions/movement_flight.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://bq7552awr5er8" path="res://addons/godot-xr-tools/assets/left_hand.tscn" id="7"]
[ext_resource type="PackedScene" uid="uid://b4ysuy43poobf" path="res://addons/godot-xr-tools/functions/function_pickup.tscn" id="8"]
[ext_resource type="PackedScene" uid="uid://cvokcudrffkgc" path="res://addons/godot-xr-tools/functions/movement_glide.tscn" id="9"]
[ext_resource type="Script" path="res://game/player/PlayerLogic.gd" id="10"]
[ext_resource type="AudioStream" uid="uid://rowct5kgb2xt" path="res://assets/freesound.org/146770__qubodup__rocket-boost-engine-loop.mp3" id="11"]
[ext_resource type="PackedScene" uid="uid://bxm1ply47vaan" path="res://addons/godot-xr-tools/functions/movement_climb.tscn" id="12"]
[ext_resource type="PackedScene" uid="uid://ckt118vcpmr6q" path="res://addons/godot-xr-tools/functions/movement_physical_jump.tscn" id="13_xpxmg"]
[ext_resource type="PackedScene" uid="uid://c2q5phg8w08o" path="res://addons/godot-xr-tools/functions/movement_jump.tscn" id="14"]
[ext_resource type="AudioStream" uid="uid://ftr7sla2gygp" path="res://assets/freepd.com/Epic Blockbuster 2.mp3" id="16"]
[ext_resource type="PackedScene" uid="uid://bib7038a8f6fg" path="res://game/player/fuel_gauge/FuelGauge.tscn" id="17"]
[ext_resource type="Script" path="res://game/player/PlayerRules.gd" id="18"]
[ext_resource type="AudioStream" uid="uid://bs57pn2i10m4p" path="res://assets/freesound.org/570462__nuclearboy__delta-7-detonation-alarm.mp3" id="19"]
[ext_resource type="PackedScene" uid="uid://b6bk2pj8vbj28" path="res://addons/godot-xr-tools/functions/movement_turn.tscn" id="20"]
[ext_resource type="PackedScene" uid="uid://cqhw276realc" path="res://addons/godot-xr-tools/functions/function_pointer.tscn" id="21"]
[ext_resource type="PackedScene" path="res://addons/godot-xr-tools/misc/vr_common_shader_cache.tscn" id="22"]

[node name="Player" type="XROrigin3D"]
script = ExtResource("1_74f0b")

[node name="XrCamera3d" type="XRCamera3D" parent="."]

[node name="VRCommonShaderCache" parent="XrCamera3d" instance=ExtResource("22")]

[node name="LeftHandController" type="XRController3D" parent="."]
tracker = &"left_hand"
pose = &"aim"

[node name="LeftHand" parent="LeftHandController" instance=ExtResource("7")]

[node name="MovementDirect" parent="LeftHandController" instance=ExtResource("3")]
max_speed = 3.0
strafe = true
enabled = false

[node name="FunctionPickup" parent="LeftHandController" instance=ExtResource("8")]
ranged_distance = 10.0
ranged_angle = 10.0

[node name="MovementJump" parent="LeftHandController" instance=ExtResource("14")]
jump_button_action = "ax_button"
enabled = false

[node name="FuelGauge" parent="LeftHandController" instance=ExtResource("17")]
transform = Transform3D(0.939693, -0.34202, 0, 0.321394, 0.883022, -0.34202, 0.116978, 0.321394, 0.939693, -0.05, 0, 0.2)

[node name="RightHandController" type="XRController3D" parent="."]
tracker = &"right_hand"
pose = &"aim"

[node name="RightHand" parent="RightHandController" instance=ExtResource("2")]

[node name="MovementDirect" parent="RightHandController" instance=ExtResource("3")]
max_speed = 3.0
enabled = false

[node name="FunctionPickup" parent="RightHandController" instance=ExtResource("8")]
ranged_distance = 10.0
ranged_angle = 10.0

[node name="MovementJump" parent="RightHandController" instance=ExtResource("14")]
jump_button_action = "ax_button"
enabled = false

[node name="MovementTurn" parent="RightHandController" instance=ExtResource("20")]
smooth_rotation = true

[node name="FunctionPointer" parent="RightHandController" instance=ExtResource("21")]

[node name="PlayerBody" parent="." instance=ExtResource("5")]

[node name="MovementClimb" parent="." instance=ExtResource("12")]
fling_multiplier = 2.0
left_pickup = NodePath("../LeftHandController/FunctionPickup")
right_pickup = NodePath("../RightHandController/FunctionPickup")
enabled = false

[node name="MovementFlight" parent="." instance=ExtResource("6")]
bearing = 0
speed_scale = 0.0
speed_traction = 0.0
acceleration_scale = 20.0
guidance = 1.0
exclusive = false
enabled = false

[node name="MovementPhysicalJump" parent="." instance=ExtResource("13_xpxmg")]
arms_jump_threshold = 5.0
enabled = false

[node name="MovementGlide" parent="." instance=ExtResource("9")]
enabled = false

[node name="PlayerLogic" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
script = ExtResource("10")

[node name="FlightSound" type="AudioStreamPlayer" parent="PlayerLogic"]
stream = ExtResource("11")

[node name="GlideSound" type="AudioStreamPlayer" parent="PlayerLogic"]
stream = ExtResource("1")

[node name="GameMusic" type="AudioStreamPlayer" parent="PlayerLogic"]
stream = ExtResource("16")
autoplay = true

[node name="LowFuelAlarmSound" type="AudioStreamPlayer" parent="PlayerLogic"]
stream = ExtResource("19")

[node name="PlayerRules" type="Node" parent="."]
script = ExtResource("18")

[connection signal="flight_finished" from="MovementFlight" to="PlayerLogic" method="_on_flight_finished"]
[connection signal="flight_started" from="MovementFlight" to="PlayerLogic" method="_on_flight_started"]
[connection signal="player_glide_end" from="MovementGlide" to="PlayerLogic" method="_on_glide_finished"]
[connection signal="player_glide_start" from="MovementGlide" to="PlayerLogic" method="_on_glide_started"]
